# mat401-computational-project

./: README.md  pyproject.toml
src/: cone.py  graph.py  main.py  numeric_solvers.py  numeric_types.py  questions.ipynb  simulation.py  solvers.py  type_checking.py
test/notebook/: main.ipynb
