[project]
name = "mat401-computational-project"
description = "Simulation of the rigid-body dynamics of a rotating cone via the Runge-Kutta method."
authors = [
    {name = "Finn Else-McCormick", email = "2200864@uad.ac.uk"}
]
dynamic=["version"]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[build-system]
requires = [
    "hatchling >= 1.26",
    "versioningit",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"
